# financial-dashboard

./: README.md  setup.cfg
gnucash_financial_dashboard/: app.py  data.py  plotting.py
gnucash_financial_dashboard/assets/: styling.css
