[metadata]
name = gnucash-financial-dashboard
version = 0.0.1
description = An interactive dashboard showing stats about a given GnuCash ledger in sqlite3 format
long_description = file:README.md
long_description_content_type = text/markdown
author = Jan C Peters
author_email = devel@jancp.de
url = https://github.com/j4ncp/financial-dashboard
license_files = LICENSE

[options]
packages = find:
install_requires =
    plotly
    numpy
    pandas
    dash
    dash-bootstrap-components

[options.entry_points]
console_scripts =
    serve_dashboard = gnucash_financial_dashboard.app:main
